<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_amount" />

    <EditText
        android:id="@+id/lamt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_length_years" />
    
    <RadioGroup 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<RadioButton android:id="@+id/ten"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ten"
        	android:checked="true"
        	android:onClick="onRadioButtonClicked"/>
    	<RadioButton android:id="@+id/fifteen"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/fifteen"
        	android:onClick="onRadioButtonClicked"/>
    	<RadioButton android:id="@+id/twenty"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/twenty"
        	android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	
    
   
	 <TableRow 
	     android:layout_height="wrap_content" 
      	 android:layout_width="match_parent" 
      	 android:id="@+id/tableRow4">
    	
      <TextView 
          android:id="@+id/customTextView" 
          android:layout_width="wrap_content" 
          android:text="@string/custom"
          android:textColor="#000" 
          android:paddingRight="5dp" 
          android:gravity="right|center_vertical" 
          android:layout_height="match_parent" 
          android:paddingBottom="5dp" 
          android:focusable="false">
      </TextView>
      
      <SeekBar
          android:id="@+id/annualInterestRate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_span="2"
          android:layout_weight="1"
          android:max="400"
          android:paddingBottom="5dp"
          android:paddingLeft="8dp"
          android:paddingRight="8dp"
          android:progress="18" >

      </SeekBar>
      
      <TextView 
          android:id="@+id/annualRateTextView" 
          android:layout_width="wrap_content" 
          android:text="@string/default_annual_rate" 
          android:textColor="#000" 
          android:gravity="center_vertical" 
          android:layout_height="match_parent" 
          android:paddingLeft="5dp" 
          android:paddingBottom="5dp" 
          android:focusable="false" 
          android:layout_weight="1">
      </TextView>
      
   </TableRow>
   
	 <TableRow 
	     android:layout_height="wrap_content" 
      	 android:layout_width="match_parent" 
      	 android:id="@+id/tableRow0">
      
      <TextView 
         android:id="@+id/totalPaymentTextView" 
         android:text="@string/total_payment_textview"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:textColor="#000" 
         android:gravity="right" 
         android:paddingRight="5dp">
      </TextView>
      
      <EditText 
         android:layout_width="wrap_content" 
         android:id="@+id/totalPayment" 
         android:layout_height="wrap_content" 
         android:layout_span="3" 
         android:inputType="numberDecimal" 
         android:layout_weight="1">
      </EditText>
      
   </TableRow>

</TableLayout>
